--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -600,9 +600,13 @@ p {
 ===========================*/
 /*===== NAVBAR EIGHT =====*/
 .navbar-area {
-  background: -webkit-linear-gradient(left, #43cae9 0%, #38f9d7 100%);
+  /*background: -webkit-linear-gradient(left, #43cae9 0%, #38f9d7 100%);
   background: -o-linear-gradient(left, #43cae9 0%, #38f9d7 100%);
-  background: linear-gradient(to right, #43cae9 0%, #38f9d7 100%);
+  background: linear-gradient(to right, #43cae9 0%, #38f9d7 100%);*/
+  background: -webkit-linear-gradient(left, black 0%, black 100%);
+  background: -o-linear-gradient(left, black 0%, black 100%);
+  background: linear-gradient(to right, black 0%, black 100%);
+  
   padding: 10px 0;
   position: absolute;
   top: 0;
@@ -853,9 +857,12 @@ p {
                 width: 100%;
                 height: 100%;
                 border-radius: 5px;
-                background: -webkit-linear-gradient(left, #0067f4 0%, #2bdbdc 100%);
+                /*background: -webkit-linear-gradient(left, #0067f4 0%, #2bdbdc 100%);
                 background: -o-linear-gradient(left, #0067f4 0%, #2bdbdc 100%);
-                background: linear-gradient(to right, #0067f4 0%, #2bdbdc 100%);
+                background: linear-gradient(to right, #0067f4 0%, #2bdbdc 100%);*/
+                background: -webkit-linear-gradient(left, black 0%, black 100%);
+                background: -o-linear-gradient(left, black 0%, black 100%);
+                background: linear-gradient(to right, black 0%, black 100%);
                 opacity: 0;
                 -webkit-transition: all 0.3s ease-out 0s;
                 -moz-transition: all 0.3s ease-out 0s;
